@@ -372,6 +372,14 @@ class TestArchives (ArchiveTest):
         self.archive_create('t.txt.lz.foo', format="lzip", singlefile=True)
 
     @needs_program('file')
+    @needs_program('plzip')
+    def test_plzip (self):
+        self.program = 'plzip'
+        self.archive_test('t.txt.lz.foo')
+        self.archive_extract('t.txt.lz.foo')
+        self.archive_create('t.txt.lz.foo', format="lzip", singlefile=True)
+
+    @needs_program('file')
     @needs_program('pdlzip')
     def test_pdlzip (self):
         self.program = 'pdlzip'
